手風琴元件

--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>This is the first item's accordion body.</strong> It is
-                    shown by default, until the collapse plugin adds the appropriate
-                    classes that we use to style each element. These classes control the
-                    overall appearance, as well as the showing and hiding via CSS
-                    transitions. You can modify any of this with custom CSS or
-                    overriding our default variables. It's also worth noting that just
-                    about any HTML can go within the <code>.accordion-body</code>,
-                    though the transition does limit overflow.
+                    <strong>This is the first item's accordion body.</strong>Lorem ipsum dolor sit
+                    amet.<code>.accordion-body</code>, though the transition does
+                    limit overflow.
                 </div>
             </div>
         </div>
@@ -42,13 +37,8 @@
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is
-                    hidden by default, until the collapse plugin adds the appropriate
-                    classes that we use to style each element. These classes control the
-                    overall appearance, as well as the showing and hiding via CSS
-                    transitions. You can modify any of this with custom CSS or
-                    overriding our default variables. It's also worth noting that just
-                    about any HTML can go within the <code>.accordion-body</code>,
+                    <strong>This is the second item's accordion body.</strong>Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Quasi, at!<code>.accordion-body</code>,
                     though the transition does limit overflow.
                 </div>
             </div>
@@ -63,14 +53,10 @@
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is
-                    hidden by default, until the collapse plugin adds the appropriate
-                    classes that we use to style each element. These classes control the
-                    overall appearance, as well as the showing and hiding via CSS
-                    transitions. You can modify any of this with custom CSS or
-                    overriding our default variables. It's also worth noting that just
-                    about any HTML can go within the <code>.accordion-body</code>,
-                    though the transition does limit overflow.
+                    <strong>This is the third item's accordion body.</strong>Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. A laudantium ab officia vitae repellat velit!<code>.accordion-body</code>, though
+                    the transition does limit
+                    overflow.
                 </div>
             </div>
         </div>
