--- a/container.html
+++ b/container.html
@@ -11,12 +11,15 @@
 
 <body>
     <div class="container-md">
-        <p class="bg-info text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, labore?</p>
-        <p class="bg-info text-white">Sint omnis consectetur fugiat consequatur totam enim. Dolorum, mollitia porro?</p>
-        <p class="bg-info text-white">Ullam minus fugit numquam a? Enim eos quo voluptas deleniti?</p>
-        <p class="bg-info text-white">Rerum exercitationem labore aliquam ducimus est neque. Aliquid, odio architecto?
+        <p class="bg-light border text-success">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, labore?</p>
+        <p class="bg-light border text-success">Sint omnis consectetur fugiat consequatur totam enim. Dolorum, mollitia
+            porro?</p>
+        <p class="bg-light border text-success">Ullam minus fugit numquam a? Enim eos quo voluptas deleniti?</p>
+        <p class="bg-light border text-success">Rerum exercitationem labore aliquam ducimus est neque. Aliquid, odio
+            architecto?
         </p>
-        <p class="bg-info text-white">Vel neque eveniet totam! Magnam culpa necessitatibus tempora libero repudiandae?
+        <p class="bg-light border text-success">Vel neque eveniet totam! Magnam culpa necessitatibus tempora libero
+            repudiandae?
         </p>
     </div>
     <script src="./js/bootstrap.bundle.js"></script>
