--- a/main.html
+++ b/main.html
@@ -11,8 +11,16 @@
 
 <body>
     <div class="bg-light border container-md">
+        <nav class="row bg-info">
+            <div class="col-3 border">
+                Logo
+            </div>
+            <div class="col-6 border">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, accusantium?
+            </div>
+        </nav>
         <main class="row">
-            <div class="col-3">
+            <div class="col-md-3 border">
                 <p>Sit dolor veniam duis incididunt deserunt eu adipisicing et et. Proident ullamco pariatur nisi elit.
                     Consectetur veniam enim minim excepteur ipsum adipisicing mollit do irure exercitation ipsum ipsum
                     proident nulla. Culpa amet occaecat aliqua laboris.</p>
@@ -21,7 +29,7 @@
                     id elit ut proident.</p>
             </div>
 
-            <div class="col">
+            <div class="col-md-9 border">
                 <p>Sit dolor veniam duis incididunt deserunt eu adipisicing et et. Proident ullamco pariatur nisi elit.
                     Consectetur veniam enim minim excepteur ipsum adipisicing mollit do irure exercitation ipsum ipsum
                     proident nulla. Culpa amet occaecat aliqua laboris.</p>
