--- a/features.html
+++ b/features.html
@@ -26,10 +26,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="./main.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./features.html">Features</a>
+                            <a class="nav-link active"  aria-current="page" href="#">Features</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pricing.html">Pricing</a>
@@ -41,25 +41,7 @@
                 </div>
             </div>
         </nav>
-        <main class="row">
-            <div class="col-md-3 border">
-                <p>Sit dolor veniam duis incididunt deserunt eu adipisicing et et. Proident ullamco pariatur nisi elit.
-                    Consectetur veniam enim minim excepteur ipsum adipisicing mollit do irure exercitation ipsum ipsum
-                    proident nulla. Culpa amet occaecat aliqua laboris.</p>
-                <p>Tempor consequat enim irure tempor elit eu consequat qui mollit. Consequat in deserunt est esse
-                    cupidatat irure irure voluptate tempor sunt. Pariatur in proident occaecat sint. Ea voluptate ut in
-                    id elit ut proident.</p>
-            </div>
-
-            <div class="col-md-9 border">
-                <p>Sit dolor veniam duis incididunt deserunt eu adipisicing et et. Proident ullamco pariatur nisi elit.
-                    Consectetur veniam enim minim excepteur ipsum adipisicing mollit do irure exercitation ipsum ipsum
-                    proident nulla. Culpa amet occaecat aliqua laboris.</p>
-                <p>Tempor consequat enim irure tempor elit eu consequat qui mollit. Consequat in deserunt est esse
-                    cupidatat irure irure voluptate tempor sunt. Pariatur in proident occaecat sint. Ea voluptate ut in
-                    id elit ut proident.</p>
-            </div>
-        </main>
+        <h1>Features</h1>
     </div>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
