--- a/carousel.html
+++ b/carousel.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <title>Document</title>
+    <title>Carousel</title>
 </head>
 
 <body>
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="./main.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./features.html">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pricing.html">Pricing</a>
+                            <a class="nav-link active" aria-current="page" href="#">Pricing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled">Disabled</a>
@@ -41,13 +41,35 @@
                 </div>
             </div>
         </nav>
-        <main class="row justify-content-center">
-            <div class="col-9 bg-success border text-center">
-                <img src="https://picsum.photos/id/684/600/400" alt="" width="100%">
+        <h1>Carousel</h1>
+
+        <div class="row justify-content-center">
+            <div class="col-10">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://picsum.photos/id/388/600/400" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://picsum.photos/id/398/600/400" alt="">>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://picsum.photos/id/288/600/400" alt="">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
-
-
-        </main>
+        </div>
     </div>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
