--- a/features.html
+++ b/features.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <title>Document</title>
+    <title>Features</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="./main.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active"  aria-current="page" href="#">Features</a>
+                            <a class="nav-link active" aria-current="page" href="#">Features</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pricing.html">Pricing</a>
@@ -42,7 +42,36 @@
             </div>
         </nav>
         <h1>Features</h1>
+        <div class="row justify-content-center">
+            <div class="col-3"><img src="https://picsum.photos/id/234/300/300" alt=""></div>
+            <div class="col-3"><img src="https://picsum.photos/id/134/300/300" alt=""></div>
+            <div class="col-3"><img src="https://picsum.photos/id/334/300/300" alt=""></div>
+        </div>
     </div>
+
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-muted">© 2022 Company, Inc</span>
+        </div>
+
+        <!-- <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+                        <use xlink:href="#twitter"></use>
+                    </svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+                        <use xlink:href="#instagram"></use>
+                    </svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+                        <use xlink:href="#facebook"></use>
+                    </svg></a></li>
+        </ul> -->
+    </footer>
+
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
