--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.css">
-    <title>Document</title>
+    <title>Pricing</title>
 </head>
 
 <body>
@@ -42,7 +42,51 @@
             </div>
         </nav>
         <h1>Pricing</h1>
+
+        <div class="row justify-content-center">
+            <div class="col-sm-9 col-lg-3 gy-3">
+                <div class="card gy-3">
+                    <img src="https://picsum.photos/id/124/300/300" class="card-img-top" width="100%" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9 col-lg-3 gy-3">
+                <div class="card gy-3">
+                    <img src="https://picsum.photos/id/204/300/300" class="card-img-top" width="100%" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9 col-lg-3 gy-3">
+                <div class="card gy-3">
+                    <img src="https://picsum.photos/id/524/300/300" class="card-img-top" width="100%" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
