--- a/features.html
+++ b/features.html
@@ -43,9 +43,9 @@
         </nav>
         <h1>Features</h1>
         <div class="row justify-content-center">
-            <div class="col-3"><img src="https://picsum.photos/id/234/300/300" alt=""></div>
-            <div class="col-3"><img src="https://picsum.photos/id/134/300/300" alt=""></div>
-            <div class="col-3"><img src="https://picsum.photos/id/334/300/300" alt=""></div>
+            <div class="col-3"><img src="https://picsum.photos/id/234/300/300" alt="" width="100%"></div>
+            <div class="col-3"><img src="https://picsum.photos/id/134/300/300" alt="" width="100%"></div>
+            <div class="col-3"><img src="https://picsum.photos/id/334/300/300" alt="" width="100%"></div>
         </div>
     </div>
 
